<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nav_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <include layout="@layout/toolbar_head"></include>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/icon_launch"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/au_current_version"
            android:textColor="@color/colorSubtitle"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_new_version"
                    style="@style/menuItem"
                    android:clickable="true"
                    android:text="@string/au_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:text="1.0"
                    android:textColor="@color/colorSubtitle"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                style="@style/horizontalLine"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/tv_update_log"
                style="@style/menuItem"
                android:clickable="true"
                android:text="@string/au_update_log" />

            <View
                style="@style/horizontalLine"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/tv_about_star"
                style="@style/menuItem"
                android:clickable="true"
                android:text="@string/au_star" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/au_footer"
            android:textColor="@color/colorSubtitle"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>