<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/ic_nav_bg_drawerlayout"
        android:gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4000"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/nav_header_vertical_spacing">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_nav_homepage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_homepage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/hp"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_nav_recent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_recent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/rc"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nav_try"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_curtain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/fr"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_nav_sign"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_calender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/sign"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nav_third"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/tp"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorNavLine" />

    <LinearLayout
        android:id="@+id/ll_nav_issue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_deedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/fb"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_nav_setting"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:background="@drawable/ripple_one_item_bg"-->
        <!--android:clickable="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingLeft="14dp"-->
        <!--android:paddingRight="16dp">-->

        <!--<ImageView-->
            <!--android:layout_width="25dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:background="@drawable/ripple_one_item_bg"-->
            <!--android:src="@drawable/ic_nav_setting" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="12dp"-->
            <!--android:text=""-->
            <!--android:textColor="@color/colorContent"-->
            <!--android:textSize="15sp" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_nav_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/au"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nav_exit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_nav_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/app_exit"
            android:textColor="@color/colorContent"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ripple_one_item_bg"
        android:clickable="false">c
    </LinearLayout>


</LinearLayout>
